--- a/go/gocms/db/index.html
+++ b/go/gocms/db/index.html
@@ -9,3 +9,11 @@ e - email
 p - password
 m - mobile phone
 s - status
+
+
+create table `u` (
+  `i` BIGINT UNSIGNED,
+  `u` varchar(64),
+  `i` BIGINT UNSIGNED,
+  `i` BIGINT UNSIGNED,
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_bin
